<!-- vim: syntax=Markdown -->

# Changelog

## v0.5.0beta2 (not yet released)

- All: Fix issue where introduction window was still visible on the screen capture UI.
  ([#536 comment](https://github.com/dynobo/normcap/issues/536#issuecomment-1752110232))
- Windows, macOS: Fix notifications not clickable in "raw"-Mode.
  ([#438 comment](https://github.com/dynobo/normcap/issues/438#issuecomment-1752175090))
- Linux: Add support for using `xclip` to copy result to clipboard. This seems more
  stable on Wayland systems than `wl-clipboard`, at least until compatibility with
  latest Gnome updates is restored.

## v0.5.0beta1 (2023-10-08)

- All: Add [support for localization](./normcap/resources/locales/README.md) of the
  NormCap UI. Available translations so far:
  - German
- All: Add introduction on startup.
  ([#443](https://github.com/dynobo/normcap/issues/443))
- All: Add explanatory tooltips to many menu entries.
- All: Fix wrong detection of some special characters.
- All: Fix crash caused by update checker.
- All: Improve startup and recognition speed slightly.
- Windows & macOS: Add click action to desktop notifications. If a notification is
  clicked, the (last) result is opened in an appropriate application. E.g. if a URL was
  detected, it is opened in the default browser. If plain text was detected, it is saved
  as temporary text file, which is opened in the default text editor.
  ([#438](https://github.com/dynobo/normcap/issues/438))
- Windows: Change installation path from `..\dynobo\NormCap` to simpler `..\NormCap`
- Linux: Fix NormCap to work with Sway DE.
  ([#485](https://github.com/dynobo/normcap/issues/485))
- Linux: Fix multi monitor setups with Wayland causing unnecessary timeouts.
  ([#494](https://github.com/dynobo/normcap/issues/494))
- Linux: Fix crash due to missing `xcb-utils-cursor` in AppImage, by including it.
  ([#457](https://github.com/dynobo/normcap/issues/457))